compiler/test/function.err

Error at line 74:
.
 ^ : *********************ERROR********************* 
